# ApiTelegramBot

./: CMakeLists.txt  vcpkg.json
cmake/: telebot-config.cmake.in  utils.cmake
include/Telebot/: HttpContext.h  HttpsClient.h  Telebot.h  TelebotApi.h
include/Telebot/Types/: Animation.h  Audio.h  BotCommand.h  BotCommandScope.h  BotCommandScopeAllChatAdministrators.h  BotCommandScopeAllGroupChats.h  BotCommandScopeAllPrivateChats.h  BotCommandScopeChat.h  BotCommandScopeChatAdministrators.h  BotCommandScopeChatMember.h  BotCommandScopeDefault.h  CallbackGame.h  CallbackQuery.h  Chat.h  ChatAdministratorRights.h  ChatInviteLink.h  ChatJoinRequest.h  ChatLocation.h  ChatMember.h  ChatMemberAdministrator.h  ChatMemberBanned.h  ChatMemberLeft.h  ChatMemberMember.h  ChatMemberOwner.h  ChatMemberRestricted.h  ChatMemberUpdated.h  ChatPermissions.h  ChatPhoto.h  ChatShared.h  ChosenInlineResult.h  Contact.h  Dice.h  Document.h  EncryptedCredentials.h  EncryptedPassportElement.h  File.h  ForceReply.h  ForumTopic.h  ForumTopicClosed.h  ForumTopicCreated.h  (+106 more)
src/Telebot/: Telebot.cpp  TelebotApi.cpp
src/Telebot/Types/: BotCommandScope.cpp  ChatMember.cpp  GenericReply.cpp  InlineQueryResult.cpp  InputFile.cpp  InputMedia.cpp  InputMessageContent.cpp  MenuButton.cpp  PassportElementError.cpp
